# srm_credit_engine

./: .gitignore  .pre-commit-config.yaml  AI_USAGE.md  ARQUITETURA.md  README.md  agents.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a74fd0848ea6_initial_tables.py  b2f1c3d4e5a6_seed_data.py
backend/app/: config.py  database.py  exceptions.py  logging.py  main.py
backend/app/api/v1/: __init__.py  cedentes.py  currencies.py  exchange_rates.py  receivable_types.py  reports.py  simulate.py  transactions.py
backend/app/models/: __init__.py  base.py  cedentes.py  currencies.py  exchange_rates.py  receivable_types.py  transactions.py
backend/app/repositories/: cedente_repository.py  currency_repository.py  exchange_rate_repository.py  receivable_type_repository.py  statement_repository.py  transaction_repository.py
backend/app/schemas/: cedentes.py  currencies.py  exchange_rates.py  receivable_types.py  simulate.py  statements.py  transactions.py
backend/app/services/: exchange_rate_client.py  pricing_service.py
backend/app/services/pricing/: __init__.py  base.py  cheque.py  duplicata.py
backend/tests/: conftest.py  test_cedentes.py  test_pricing.py  test_pricing_service.py  test_reports.py  test_transactions.py
docs/: C4.md  ER.md  ddl.sql
frontend/: package.json
frontend/src/: App.tsx
frontend/src/api/: cedentes.ts  client.ts  currencies.ts  simulate.ts  statements.ts  transactions.ts
frontend/src/components/: Layout.tsx  Money.tsx  StatusBadge.tsx
(+9 files in other folders)
